# project

./: README.md  docker-compose.yml  pyproject.toml
backend/: .flake8  pytest.ini  requirements.txt
backend/app/: .env  .env.example  settings.py  urls.py
backend/backend/: celery.py  settings.py  urls.py
backend/tests/: conftest.py
backend/tests/users/: __init__.py  test_sms_reg_link_api_view.py  test_sms_service.py
backend/users/: tasks.py
backend/users/migrations/: 0001_initial.py
backend/users/serializers/: sms_reg_link.py
backend/users/services/: sms.py
backend/users/viewset/: __init__.py  sms_reg_link.py
backend/util/: smsc.py
docker/app/: Dockerfile  supervisor-app.conf  uwsgi.ini
